fix: filters overlapping footer

--- a/pages/product-listing/products.css
+++ b/pages/product-listing/products.css
@@ -18,7 +18,7 @@
   grid-area: filters;
   position: sticky;
   top: 0;
-  height: 80vh;
+  height: 800px;
   padding: var(--sm-space);
   transition: all 0.2s ease-in-out;
   overflow: scroll;
@@ -78,7 +78,6 @@
 /*******/
 
 /***media-queries***/
-
 @media only screen and (max-width: 1300px) {
   .grid-container {
     grid-template-areas:
